melhorias css e estrutura html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button onClick="window.location.reload();">Jogar Novamente </button>
 
     </div>
-    <div class="result" id='resultado'></div>
+    <div class="result"  ><span id="resultado"></span></div>
 
     <script src="jokenpo.js"></script>
     
